<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.account.AccountFragment"
    android:orientation="vertical">

    <TextView
        android:layout_margin="@dimen/dp_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/account"
        android:textStyle="bold"
        android:textSize="@dimen/sp_20" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="@dimen/dp_150"
        android:layout_height="@dimen/dp_150"
        android:src="@color/colorPrimary"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dp_15" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Username"
        android:textStyle="bold"
        android:textSize="@dimen/sp_20"
        android:layout_marginBottom="@dimen/dp_25" />

    <com.hconve.findroom.widgets.textwithicon.TextWithIcon
        android:id="@+id/districtButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_70"
        android:layout_margin="@dimen/dp_3"
        app:twi_icon="@drawable/ic_language"
        app:twi_text="@string/language" />

    <com.hconve.findroom.widgets.textwithicon.TextWithIcon
        android:id="@+id/wardButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_70"
        android:layout_margin="@dimen/dp_3"
        app:twi_icon="@drawable/ic_rules"
        app:twi_text="@string/term_and_services" />

    <com.hconve.findroom.widgets.loadingbutton.LoadingButton
        android:id="@+id/searchLoadingButton"
        android:layout_width="@dimen/dp_190"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_25"
        android:layout_gravity="center"
        app:lb_text="@string/logout"
        app:lb_cornerRadius="@dimen/dp_50" />

</LinearLayout>