<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_margin="@dimen/dp_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/post"
        android:textStyle="bold"
        android:textSize="@dimen/sp_20" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/imageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_30"
        app:justifyContent="space_evenly"
        app:flexWrap="wrap" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convenient"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/convenientLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:justifyContent="space_between"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_30" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_30" />

</LinearLayout>